# birdclef-2026-take-2

./: .gitignore  CLAUDE.md  pyproject.toml
src/birdclef_2026_take_2/: __init__.py  app.py  dataset.py  transforms.py
src/birdclef_2026_take_2/experiments/exp_001/: model.py  training_job.py
src/birdclef_2026_take_2/experiments/exp_002/: model.py  training_job.py
src/birdclef_2026_take_2/experiments/exp_003/: model.py  training_job.py
src/birdclef_2026_take_2/experiments/exp_004/: model.py  training_job.py
src/birdclef_2026_take_2/experiments/exp_005/: model.py  training_job.py
src/birdclef_2026_take_2/experiments/exp_006/: augmentations.py  model.py  training_job.py
src/birdclef_2026_take_2/modal_jobs/: processed.py  raw.py  smoke_test_dataset.py  spectrogram_umap.py
src/birdclef_2026_take_2/preparation/: index.py  io.py  memmap.py  pipeline.py  synth.py  types.py
tests/: conftest.py  test_dataset.py  test_transforms.py
tests/preparation/: conftest.py  test_index.py  test_io.py  test_memmap.py  test_pipeline.py  test_synth.py
