[project]
name = "birdclef-2026-take-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "josh-gree", email = "joshuadouglasgreenhalgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "modal>=1.4.0",
    "nnaudio>=0.3.4",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "wm",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
wm = { git = "https://github.com/josh-gree/wm.git" }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
]
