[project]
name = "birdclef-2026-take-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "josh-gree", email = "joshuadouglasgreenhalgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.23.0",
    "modal>=1.4.0",
    "nnaudio>=0.3.4",
    "numpy>=2.4.4",
    "onnxruntime-gpu>=1.19.0 ; sys_platform == 'linux'",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "soundfile>=0.13.1",
    "timm>=1.0.26",
    "torch>=2.5.0",
    "wm",
]

[project.scripts]
wm = "birdclef_2026_take_2.app:cli"

[tool.wm]
gpu = "T4"
volume = "birdclef-2026-processed"
data_mount = "/data"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
wm = { git = "https://github.com/josh-gree/wm.git" }
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "onnxruntime>=1.24.4",
    "pytest>=9.0.2",
]
